# subfile

./: package.json  tailwind.config.cjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  path.rs  upload.rs  util.rs
src/lib/: types.ts
src/lib/components/ui/: Loader.svelte  Notification.svelte
src/lib/components/ui/files/: Directory.svelte
src/lib/components/util/: CopyText.svelte
src/lib/helpers/: api.ts  files.ts
src/lib/icons/: Back.svelte  Check.svelte  Collection.svelte  Copy.svelte  Error.svelte  File.svelte  Folder.svelte  List.svelte  Logo.svelte  Plus.svelte  SadFace.svelte  Settings.svelte  Upload.svelte  Warning.svelte
src/lib/stores/: notification.ts  settings.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte
src/routes/app/files/: +page.svelte
src/routes/app/settings/: +page.svelte
src/routes/app/upload/: +page.svelte
src/routes/create/: +page.svelte
