[package]
name = "subfile"
version = "0.0.0"
description = "Free, unlimited, secure file storage."
authors = ["Anthony Riley"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2", features = ["clipboard-all", "dialog-open", "http-all"] }
chrono = { version = "0.4.23", features = ["serde"] }
json = { version = "0.12.4" }
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"] }
rust-argon2 = { version = "1.0" }
rand = { version = "0.8.5", features = ["getrandom"] }
notify = { version = "5.0.0", features = ["serde"] }
tokio = { version = "1.23.0" }
tokio-util = { version = "0.7.4" }
bytes = { version = "1.3.0" }
futures = { version = "0.3.25" }
futures-util = { version = "0.3.25" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
